--- a/BLAZAMGui/UI/Outputs/ADTreeView.razor
+++ b/BLAZAMGui/UI/Outputs/ADTreeView.razor
@@ -22,7 +22,7 @@
                          CanExpand=@(context is IADOrganizationalUnit)
                          EndText="@EndText?.Invoke(context)"
                          Context="itemContext">
-         
+
         </MudTreeViewItem>
     </ItemTemplate>
 
@@ -34,8 +34,8 @@
 
 }
 
-@code{
-    #nullable disable warnings
+@code {
+#nullable disable warnings
     /// <summary>
     /// If true all directory entry types will be listed.
     /// If false, only OU's will bee shown.
@@ -201,7 +201,7 @@
         if (parent.IsExpanded || parent.CachedChildren != null)
         {
 
-            var items = parent.Children.Where(c => c.ObjectType == ActiveDirectoryObjectType.OU || c.CanRead).MoveToTop(c => c.ObjectType == ActiveDirectoryObjectType.OU);
+            var items = parent.Children.Where(c => c.ObjectType == ActiveDirectoryObjectType.OU && ShouldShowOU(c) || c.CanRead).MoveToTop(c => c.ObjectType == ActiveDirectoryObjectType.OU);
             if (!ShowAllEntries)
             {
                 items = items.Where(i => i.ObjectType == ActiveDirectoryObjectType.OU);
@@ -229,15 +229,27 @@
             return children;
 
         }
-        else if(parentNode is IADOrganizationalUnit ou)
+        else if (parentNode is IADOrganizationalUnit ou)
         {
 
-            var children = ou.Children.Where(c=>c.ObjectType==ActiveDirectoryObjectType.OU).ToHashSet();
+            var children = ou.Children.Where(c => c.ObjectType == ActiveDirectoryObjectType.OU).ToHashSet();
             return children;
         }
         return new();
 
 
+    }
+
+    private bool ShouldShowOU(IDirectoryEntryAdapter entry)
+    {
+        if (entry is IADOrganizationalUnit ou)
+        {
+            if (ou.CanRead)
+                return true;
+            if (ou.CanReadInSubOus)
+                return true;
+        }
+        return false;
     }
 
 }
