--- a/BLAZAMGui/UI/Settings/AuthenticationSetting.razor
+++ b/BLAZAMGui/UI/Settings/AuthenticationSetting.razor
@@ -1,5 +1,6 @@
+@using BLAZAM.Services.Duo
 @inherits SettingsComponents
-
+@inject IDuoClientProvider Duo
 
 
 
@@ -17,9 +18,10 @@
         <MudNumericField Label="@AppLocalization["Session Timeout"]" HelperText="Time in minute" T="int?" @bind-Value="@settings.SessionTimeout" />
 
     </SettingsField>
-    @*
+
     <MudText>Duo Security MFA (optional)</MudText>
     <br />
+    <StatusCheck Status=duoHealthCheckResult Text="@AppLocalization["Duo Health Check"]"/>
     <SettingsField Label="Duo ClientID">
 
     <MudTextField Label="Duo ClientID" InputType="InputType.Password" @bind-Value="@settings.DuoClientId" />
@@ -34,7 +36,7 @@
 
     <MudTextField Label="Duo ApiHost" InputType="InputType.Password" @bind-Value="@settings.DuoApiHost" />
 
-    </SettingsField>*@
+    </SettingsField>
 
 
    
@@ -49,11 +51,11 @@
 
 </MudForm>
 @code {
-#nullable disable warnings
+    #nullable disable warnings
     AuthenticationSettings settings = new AuthenticationSettings();
     string newAdminPassword;
     string adminPasswordInDb;
-
+    bool? duoHealthCheckResult = null;
 
     string _timeoutString = "Loading...";
     protected override async Task OnInitializedAsync()
@@ -61,7 +63,7 @@
         LoadingData = true;
         await InvokeAsync(StateHasChanged);
 
-
+        duoHealthCheckResult = await Duo.GetDuoClient().DoHealthCheck();
         originalSettings = await Context.AuthenticationSettings.AsNoTracking().FirstOrDefaultAsync();
 
         settings = await Context.AuthenticationSettings.FirstOrDefaultAsync();
