--- a/BLAZAM/Pages/SignIn.cshtml
+++ b/BLAZAM/Pages/SignIn.cshtml
@@ -5,7 +5,7 @@
 }
 <div class="container-fluid">
     Redirecting... 
-</div>
+</div>@* 
 <script>
     window.location.href='@Model.RedirectUri';
-</script>
+</script> *@
