--- a/BLAZAMGui/UI/Dashboard/Widgets/FavoritesWidget.razor
+++ b/BLAZAMGui/UI/Dashboard/Widgets/FavoritesWidget.razor
@@ -16,7 +16,7 @@
              Class="py-0"
              SortMode="SortMode.Single">
     <Columns>
-        <TemplateColumn Title="Type">
+        <TemplateColumn Style="width:100px;" Title="Type">
             <CellTemplate>
                 <MudIcon Icon="@context.Item.TypeIcon()" />
             </CellTemplate>
