--- a/BLAZAMGui/UI/Outputs/StatusCheck.razor
+++ b/BLAZAMGui/UI/Outputs/StatusCheck.razor
@@ -1,7 +1,7 @@
 ﻿
 
 
-<MudIcon Color=@Color Icon="@Icon">@Text</MudIcon>
+<MudChip Color=@Color Icon="@Icon" >@Text</MudChip>
 
 @code {
     [Parameter]
