--- a/BLAZAMGui/UI/Settings/AuthenticationSetting.razor
+++ b/BLAZAMGui/UI/Settings/AuthenticationSetting.razor
@@ -18,28 +18,30 @@
         <MudNumericField Label="@AppLocalization["Session Timeout"]" HelperText="Time in minute" T="int?" @bind-Value="@settings.SessionTimeout" />
 
     </SettingsField>
+    <MudDivider Class="my-6"/>
+    <SettingsField Label="@AppLocalization["Duo Security MFA (optional)"]">
 
-    <MudText>Duo Security MFA (optional)</MudText>
-    <br />
-    <StatusCheck Status=duoHealthCheckResult Text="@AppLocalization["Duo Health Check"]"/>
+        <StatusCheck Status=duoHealthCheckResult Text="@AppLocalization["Duo Health Check"]" />
+    </SettingsField>
+
     <SettingsField Label="Duo ClientID">
 
-    <MudTextField Label="Duo ClientID" InputType="InputType.Password" @bind-Value="@settings.DuoClientId" />
+        <MudTextField Label="Duo ClientID" InputType="InputType.Password" @bind-Value="@settings.DuoClientId" />
 
     </SettingsField>
     <SettingsField Label="Duo ClientSecret">
 
-    <MudTextField Label="Duo ClientSecret" InputType="InputType.Password" @bind-Value="@settings.DuoClientSecret" />
+        <MudTextField Label="Duo ClientSecret" InputType="InputType.Password" @bind-Value="@settings.DuoClientSecret" />
 
     </SettingsField>
     <SettingsField Label="Duo ApiHost">
 
-    <MudTextField Label="Duo ApiHost" InputType="InputType.Password" @bind-Value="@settings.DuoApiHost" />
+        <MudTextField Label="Duo ApiHost" InputType="InputType.Password" @bind-Value="@settings.DuoApiHost" />
 
     </SettingsField>
 
 
-   
+
 
     <SettingsField>
 
@@ -51,7 +53,7 @@
 
 </MudForm>
 @code {
-    #nullable disable warnings
+#nullable disable warnings
     AuthenticationSettings settings = new AuthenticationSettings();
     string newAdminPassword;
     string adminPasswordInDb;
@@ -92,7 +94,7 @@
             adminPasswordInDb = settings.AdminPassword;
 
         }
-       
+
         await AuditLogger.System.SettingsChanged("Authentication", settings.GetChanges(originalSettings));
         base.Save();
         await InvokeAsync(StateHasChanged);
