--- a/BLAZAM/Pages/Benchmark.razor
+++ b/BLAZAM/Pages/Benchmark.razor
@@ -40,9 +40,9 @@ else
 } *@
 @code {
     #nullable disable warnings
-    ActiveDirectoryContext ad;
+    //ActiveDirectoryContext ad;
     bool Running = false;
-    bool adTree;
+    //bool adTree;
     int runCount = 1;
     int cycle;
     double elapsed;
