--- a/BLAZAM/Pages/Printers/ViewPrinter.razor
+++ b/BLAZAM/Pages/Printers/ViewPrinter.razor
@@ -136,8 +136,8 @@
         {
             try
             {
-                Printer.Delete();
-                SnackBarService.Success(Printer.CanonicalName + " has been deleted.");
+                Printer?.Delete();
+                SnackBarService.Success(Printer?.CanonicalName + " has been deleted.");
 
                 Nav.NavigateTo("/search");
 
@@ -153,7 +153,7 @@
     {
         if (await MessageService.Confirm("Are you sure you want to save the changes?", "Save Changes"))
         {
-            await Printer.CommitChangesAsync();
+            await Printer?.CommitChangesAsync();
             EditMode = false;
             Nav.WarnOnNavigation = false;
             SnackBarService.Success("The changes made to this printer have been saved.");
