--- a/BLAZAMGui/Layouts/CurrentUserAvatarIcon.razor
+++ b/BLAZAMGui/Layouts/CurrentUserAvatarIcon.razor
@@ -21,7 +21,7 @@ else
         get
         {
             if (UserState == null) return "background-color:#0c13a7";
-            int usernameHash = UserState.Username.GetAppHashCode();
+            int usernameHash = UserState.Username?.GetAppHashCode()??0;
             byte[] usernameHashBytes = Helpers.ByteHelpers.ToByteArray(usernameHash, 3);
             int totalBytes = 0;
             for(int x = 0; x < usernameHashBytes.Length; x++)
