--- a/BLAZAMGui/UI/Inputs/ADAutoCompleteResult.razor
+++ b/BLAZAMGui/UI/Inputs/ADAutoCompleteResult.razor
@@ -64,7 +64,7 @@
     protected override async Task OnInitializedAsync()
     {
         await base.OnInitializedAsync();
-        Task.Run(async() =>
+        _=Task.Run(async() =>
         {
             await Task.Delay(10);
             await LoadTypeIcon();
