Add help buttons that link to documentation website

--- a/BLAZAM/Pages/Configure/Templates.razor
+++ b/BLAZAM/Pages/Configure/Templates.razor
@@ -91,6 +91,8 @@
                                Icon="@Icons.Material.Filled.RestoreFromTrash" />
             </MudTooltip>
         }
+        <MudSpacer/>
+        <AppDocumentationButton Page="/admin/templates" />
     </MudStack>
 
     <AppModal @ref=RenameModal Title=@AppLocalization["Rename Category"]>
