--- a/BLAZAMGui/UI/Settings/DirectorySettings.razor
+++ b/BLAZAMGui/UI/Settings/DirectorySettings.razor
@@ -2,7 +2,7 @@
 
 
 
-<MudText Typo="Typo.h4">@AppLocalization["Active Directory Settings"]</MudText>
+<MudText Typo="Typo.h4">@AppLocalization["Active Directory Settings"] <AppDocumentationButton Page="/update/self/" /></MudText>
 
 <MudForm @onsubmit="Save">
 
