--- a/BLAZAM/Pages/Configure/Fields.razor
+++ b/BLAZAM/Pages/Configure/Fields.razor
@@ -14,6 +14,8 @@
         <MudText Typo="Typo.h6">Fields</MudText>
         <MudSpacer />
         <MudIconButton Icon="@Icons.Material.Filled.Add" OnClick="@(()=>{addFieldModal?.Show();})" />
+        <AppDocumentationButton Page="/admin/fields" />
+
     </ToolBarContent>
 
     <Columns>
