Add Duo Enable and Unreachable Behavior settings

--- a/BLAZAMGui/UI/Settings/AuthenticationSetting.razor
+++ b/BLAZAMGui/UI/Settings/AuthenticationSetting.razor
@@ -5,7 +5,7 @@
 
 
 <MudText Typo="Typo.h4">@AppLocalization["Authentication Settings"] <AppDocumentationButton Page="/admin/settings/authentication" /></MudText>
-    
+
 <MudForm @onsubmit=Save>
 
 
@@ -19,25 +19,34 @@
         <MudNumericField Label="@AppLocalization["Session Timeout"]" HelperText="Time in minute" T="int?" @bind-Value="@settings.SessionTimeout" />
 
     </SettingsField>
-    <MudDivider Class="my-6"/>
+    <MudDivider Class="my-6" />
     <SettingsField Label="@AppLocalization["Duo Security MFA (optional)"]">
 
         <StatusCheck Status=duoHealthCheckResult Text="@AppLocalization["Duo Health Check"]" />
     </SettingsField>
+    <SettingsField Label="@AppLocalization["Duo Enabled"]">
 
-    <SettingsField Label="Duo ClientID">
-
-        <MudTextField Label="Duo ClientID" InputType="InputType.Password" @bind-Value="@settings.DuoClientId" />
-
-    </SettingsField>
-    <SettingsField Label="Duo ClientSecret">
-
-        <MudTextField Label="Duo ClientSecret" InputType="InputType.Password" @bind-Value="@settings.DuoClientSecret" />
+        <MudSwitch Label=@AppLocalization["Duo Enabled"] T="bool" @bind-Value="@settings.DuoEnabled" UnCheckedColor="Color.Error" Color="Color.Success" Disabled=@(duoHealthCheckResult!=true) />
 
     </SettingsField>
-    <SettingsField Label="Duo ApiHost">
+    <SettingsField Label="@AppLocalization["Duo Unreachable Behavior"]">
 
-        <MudTextField Label="Duo ApiHost" InputType="InputType.Password" @bind-Value="@settings.DuoApiHost" />
+        <MudSwitch Label=@settings.DuoUnreachableBehavior.ToString() T="DuoUnreachableBehavior" Converter=@(new BehaviorConverter()) @bind-Value="@settings.DuoUnreachableBehavior" UnCheckedColor="Color.Error" Color="Color.Success" Disabled=@(duoHealthCheckResult!=true)/>
+
+    </SettingsField>
+    <SettingsField Label=@AppLocalization["Duo ClientID"]>
+
+        <MudTextField Label=@AppLocalization["Duo ClientID"] InputType="InputType.Text" @bind-Value="@settings.DuoClientId" />
+
+    </SettingsField>
+    <SettingsField Label=@AppLocalization["Duo ClientSecret"]>
+
+        <MudTextField Label=@AppLocalization["Duo ClientSecret"] InputType="InputType.Password" @bind-Value="@settings.DuoClientSecret" />
+
+    </SettingsField>
+    <SettingsField Label=@AppLocalization["Duo ApiHost"]>
+
+        <MudTextField Label=@AppLocalization["Duo ApiHost"] InputType="InputType.Text" @bind-Value="@settings.DuoApiHost" />
 
     </SettingsField>
 
@@ -64,25 +73,26 @@
     protected override async Task OnInitializedAsync()
     {
         await base.OnInitializedAsync();
-        Task.Run(async() =>
+        Task.Run(async () =>
         {
-             LoadingData = true;
-        await InvokeAsync(StateHasChanged);
+            LoadingData = true;
+            await InvokeAsync(StateHasChanged);
 
+            originalSettings = await Context.AuthenticationSettings.AsNoTracking().FirstOrDefaultAsync();
+
+            settings = await Context.AuthenticationSettings.FirstOrDefaultAsync();
+            _timeoutString = settings.SessionTimeout.ToString() + " Minutes";
+
+            //Pull encrypted admin pass and store encrypted value
+            adminPasswordInDb = settings?.AdminPassword;
+            newAdminPassword = adminPasswordInDb;
+            LoadingData = false;
+            await InvokeAsync(StateHasChanged);
             duoHealthCheckResult = await Duo.DoHealthCheckAsync();
-        originalSettings = await Context.AuthenticationSettings.AsNoTracking().FirstOrDefaultAsync();
+            await InvokeAsync(StateHasChanged);
 
-        settings = await Context.AuthenticationSettings.FirstOrDefaultAsync();
-        _timeoutString = settings.SessionTimeout.ToString() + " Minutes";
-
-        //Pull encrypted admin pass and store encrypted value
-        adminPasswordInDb = settings?.AdminPassword;
-        newAdminPassword = adminPasswordInDb;
-        LoadingData = false;
-        await InvokeAsync(StateHasChanged);
-        
         });
-       
+
 
     }
     private void UpdateTimeoutDisplay()
@@ -106,5 +116,49 @@
         base.Save();
         await InvokeAsync(StateHasChanged);
 
+    }
+
+    public class BehaviorConverter : BoolConverter<DuoUnreachableBehavior>
+    {
+
+        public BehaviorConverter()
+        {
+            SetFunc = OnSet;
+            GetFunc = OnGet;
+        }
+
+        private DuoUnreachableBehavior OnGet(bool? value)
+        {
+            try
+            {
+                return (value==true)?DuoUnreachableBehavior.Bypass:DuoUnreachableBehavior.Block;
+            }
+            catch (Exception e)
+            {
+                UpdateGetError("Conversion error: " + e.Message);
+                return default;
+            }
+        }
+
+        private bool? OnSet(DuoUnreachableBehavior arg)
+        {
+            if (arg == null)
+                return null;
+            try
+            {
+                    return (int)arg==1;
+                
+            }
+            catch (FormatException e)
+            {
+                UpdateSetError("Conversion error: " + e.Message);
+                return null;
+            }
+        }
+
+    }
+    private bool? DuoUnreachableBehaviorConverter(DuoUnreachableBehavior val)
+    {
+        return (int)val==1;
     }
 }
